fix: divider width 100% + higher opacity so it's visible

--- a/src/views/EditorView/SideNavigationBar/LabelInputField/LabelInputField.scss
+++ b/src/views/EditorView/SideNavigationBar/LabelInputField/LabelInputField.scss
@@ -121,10 +121,10 @@
           }
 
           .DropdownDivider {
-            align-self: stretch;
+            width: 100%;
             height: 1px;
-            background-color: rgba(255, 255, 255, 0.15);
-            margin: 3px 10px;
+            background-color: rgba(255, 255, 255, 0.35);
+            margin: 4px 0;
             flex-shrink: 0;
           }
 
